--- a/student-distrib/Makefile.dep
+++ b/student-distrib/Makefile.dep
@@ -1,5 +1,8 @@
 boot.o: boot.S multiboot.h x86_desc.h types.h
+PeachOS_Interrupt.o: PeachOS_Interrupt.S
 x86_desc.o: x86_desc.S x86_desc.h types.h
 i8259.o: i8259.c i8259.h types.h lib.h
 kernel.o: kernel.c multiboot.h types.h x86_desc.h lib.h i8259.h debug.h
 lib.o: lib.c lib.h types.h
+PeachOS_Keyboard.o: PeachOS_Keyboard.c PeachOS_Keyboard.h lib.h types.h \
+  x86_desc.h i8259.h
